--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,14 +14,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
         <activity
-            android:name=".ui.login.SignUpActivity"
-            android:label="@string/title_activity_sign_up">
+            android:name=".ui.login.LoginActivity"
+            android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- PARSE -->
+        <activity
+            android:name=".ui.signup.SignUpActivity"
+            android:label="@string/title_activity_sign_up">
+        </activity> <!-- PARSE -->
         <meta-data
             android:name="com.parse.SERVER_URL"
             android:value="@string/back4app_server_url" />
@@ -31,7 +35,8 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="@string/back4app_client_key" /> <!-- PARSE -->
-        <activity android:name=".ui.login.MainActivity">
+        <activity android:name=".ui.signup.MainActivity">
+
             <!--
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
