--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
+        <activity android:name=".HomeScreen"></activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
@@ -24,8 +25,7 @@
         </activity>
         <activity
             android:name=".ui.signup.SignUpActivity"
-            android:label="@string/title_activity_sign_up">
-        </activity> <!-- PARSE -->
+            android:label="@string/title_activity_sign_up"></activity> <!-- PARSE -->
         <meta-data
             android:name="com.parse.SERVER_URL"
             android:value="@string/back4app_server_url" />
@@ -35,15 +35,7 @@
         <meta-data
             android:name="com.parse.CLIENT_KEY"
             android:value="@string/back4app_client_key" /> <!-- PARSE -->
-        <activity android:name=".ui.signup.MainActivity">
 
-            <!--
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
-        </activity>
     </application>
 
 </manifest>
