Set up new image button for the calendar activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/Theme.Back4AppExample">
         <activity android:name=".ui.settings.SettingsActivity"></activity>
         <activity android:name=".ui.pound.PoundActivity" />
+        <activity android:name=".ui.graph.CalendarActivity"/>
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardActivity" />
         <activity android:name=".HomeScreen" />
