Created method which generates a pop-up window for text entry to rename accounts. No text input as of yet.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
-        <activity android:name=".ui.accountPage.accountPage"></activity>
+        <activity android:name=".ui.accountPage.RenamePopUp"></activity>
+        <activity android:name=".ui.accountPage.AccountPage" />
         <activity android:name=".ui.settings.SettingsActivity" />
         <activity android:name=".ui.pound.PoundActivity" />
         <activity android:name=".ui.graph.GraphActivity" />
