--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
-        <activity android:name=".ui.settings.SettingsActivity"></activity>
+        <activity android:name=".ui.card.cardDetails"></activity>
+        <activity
+            android:name=".ui.card.createCard"
+            android:label="@string/title_activity_create_card"
+            android:theme="@style/Theme.Back4AppExample.NoActionBar" />
+        <activity android:name=".ui.settings.SettingsActivity" />
         <activity android:name=".ui.pound.PoundActivity" />
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardActivity" />
