--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
-        <activity android:name=".VaultPage"></activity>
+        <activity android:name=".ui.vaultPage.VaultPage"></activity>
         <activity android:name=".ui.popup" />
         <activity android:name=".ui.CreditsPage" />
         <activity android:name=".ui.accountPage.AccountPage" />
