--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
+        <activity android:name=".ui.vaultPage.VaultPage"></activity>
+        <activity android:name=".ui.popup.popup" />
+        <activity android:name=".ui.CreditsPage" />
+        <activity android:name=".ui.accountPage.AccountPage" />
         <activity android:name=".ui.card.ChoosePinForNewCard" />
         <activity android:name=".ui.card.CreateCard" />
         <activity android:name=".ui.settings.SettingsActivity" />
