--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
-        <activity android:name=".ui.vaultPage.VaultPage"></activity>
+        <activity android:name=".ui.settings.CloseAccountActivity"></activity>
+        <activity android:name=".ui.vaultPage.VaultPage" />
         <activity android:name=".ui.popup.popup" />
         <activity android:name=".ui.CreditsPage" />
         <activity android:name=".ui.accountPage.AccountPage" />
         <activity android:name=".ui.settings.SettingsActivity" />
         <activity android:name=".ui.pound.PoundActivity" />
-        <activity android:name=".ui.graph.CalendarActivity"/>
-        <activity android:name=".ui.graph.DateTransferActivity"/>
+        <activity android:name=".ui.graph.CalendarActivity" />
+        <activity android:name=".ui.graph.DateTransferActivity" />
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardActivity" />
         <activity android:name=".HomeScreen" />
