changing class names

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,14 @@
         <activity android:name=".ui.popup.popup" />
         <activity android:name=".ui.CreditsPage" />
         <activity android:name=".ui.accountPage.AccountPage" />
-        <activity android:name=".ui.card.ChoosePinForNewCard" />
-        <activity android:name=".ui.card.CreateCard" />
+        <activity android:name=".ui.card.ChoosePinForNewCardPage" />
+        <activity android:name=".ui.card.CreateCardPage" />
         <activity android:name=".ui.settings.SettingsActivity" />
         <activity android:name=".ui.pound.PoundActivity" />
         <activity android:name=".ui.graph.CalendarActivity" />
         <activity android:name=".ui.graph.DateTransferActivity" />
         <activity android:name=".ui.graph.GraphActivity" />
-        <activity android:name=".ui.card.CardActivity" />
+        <activity android:name=".ui.card.CardPage" />
         <activity android:name=".HomeScreen" />
         <activity
             android:name=".ui.login.LoginActivity"
