--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".ui.graph.DateTransferActivity"/>
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardActivity" />
-        <activity android:name=".HomeScreen" />
+        <activity android:name=".ui.HomeScreen" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
