--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Back4AppExample">
         <activity android:name=".ui.vaultPage.VaultPage" />
-        <activity android:name=".ui.popup.popup" />
         <activity android:name=".ui.CreditsPage" />
         <activity android:name=".ui.accountPage.AccountPage" />
         <activity android:name=".ui.card.ChoosePinForNewCardPage" />
@@ -25,7 +24,7 @@
         <activity android:name=".ui.graph.DateTransferActivity" />
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardPage" />
-        <activity android:name=".HomeScreen" />
+        <activity android:name=".ui.HomeScreen" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
