--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".App"
+        android:name=".ui.pound.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,6 +25,15 @@
         <activity android:name=".ui.graph.GraphActivity" />
         <activity android:name=".ui.card.CardPage" />
         <activity android:name=".ui.HomeScreen" />
+        <activity
+            android:name=".ui.pound.NewRecipientTabbed"
+            android:label="@string/title_activity_new_recipient_tabbed"
+            android:theme="@style/Theme.Back4AppExample.NoActionBar"></activity>
+        <activity android:name=".ui.pound.TransferToOthers" />
+        <activity android:name=".ui.pound.TransferBetweenOwnAccounts" />
+        <activity android:name=".ui.pound.TransferComplete" />
+        <activity android:name=".ui.pound.NewRecipient" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login">
